<resources>
    <string name="app_name">Ideelee Service</string>
    <string name="welcometoideelee">Welcome to ideelee+</string>
    <string name="LOGIN">LOGIN</string>
    <string name="entermobilenumber">Enter Mobile Number</string>
    <string name="continue_">Continue</string>
    <string name="continuewithfacebook">Continue with facebook</string>
    <string name="donthaveanaccount">Don\'t have an Account?</string>
    <string name="registernow">Register Now</string>
    <string name="OR">OR</string>
    <string name="register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="alreadyhaveanaccount">Already have an Account?</string>
    <string name="loginnow">Login Now</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_home_navigation">HomeNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="VastArray">Vast Array of services just with a single app</string>
    <string name="dott">....</string>
    <string name="electrician">Electrician</string>
    <string name="carwash">Car Wash</string>
    <string name="massage">Massage</string>
    <string name="babysitting">Baby Sitting</string>
    <string name="maids">Maids</string>
    <string name="towing">Towing</string>
    <string name="carpentar">Carpentar</string>
    <string name="veterinary">Veterinary</string>
    <string name="homepainting">Home Painting</string>
    <string name="buycoupons">Buy Coupons</string>
    <string name="more">More</string>
    <string name="OTP">OTP</string>
    <string name="enterotp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topratedserviceprovider">Top Rated Service Providers</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="wallet">WALLET</string>
    <string name="booking">BOOKING</string>
    <string name="changeloction">Change Location</string>
    <string name="filter">Filter</string>
    <string name="relevance">Relevance</string>
    <string name="password">Password</string>
    <string name="user_or_phone">User or Phone</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="type_name_here">Type name here</string>
    <string name="phone_hint">Type mobile numbere here</string>
    <string name="enter_your_address_here">Enter your address here...</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="my_orders">My Orders</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="invite_and_earn">Invite and Earn</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="forgot">Forgot</string>
    <string name="login_now">Login Now</string>
    <string name="your_order">Your Order</string>
    <string name="coupen">Coupon</string>
    <string name="online_payment">Online Payment</string>
    <string name="_121_cresent_avenue_drybeck">121 Cresent Avenue, DRYBECK</string>
    <string name="submit">Submit</string>
    <string name="open_now">OPEN NOW</string>
    <string name="get_5_off_on_order_above_101">Get $5 off on order above $101</string>
    <string name="ratingvalue">4.1</string>
    <string name="the_pepper_mockingbird">THE PEPPER MOCKINGBIRD</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="view_cart">View Cart</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="plac_order">place order</string>
    <string name="additional_charges_if_any">Additional Charges (If any)</string>
    <string name="terms_conditions"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="monthly">MONTHLY</string>
    <string name="help_supports"><![CDATA[Help & Supports]]></string>
    <string name="skip">Skip</string>
    <string name="on_demand_services">On Demand Services</string>
    <string name="delivery_services">Delivery Services</string>
    <string name="on_progress">On Progress</string>
    <string name="completed">Completed</string>
    <string name="enter_old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="select_a_service_type">Select a Service Type</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="liquid_delivery">Liquid Delivery</string>
    <string name="gift_gallery">Gift Gallery</string>
    <string name="request_for_a_new_category">Request for a new Category</string>
    <string name="request_now">Request Now</string>
    <string name="on_demand">On Demand Services</string>
    <string name="category_name">Category Name</string>
    <string name="note_if_any">Note (If any)</string>
    <string name="product_list">Product List</string>
    <string name="add_product">Add Product</string>
    <string name="pd_details">Product Details</string>
    <string name="per_hour">(Per Hour)</string>
    <string name="add_pricing_for_service">Add pricing for service</string>
    <string name="add_coupons">Add Coupons</string>
    <string name="buy_a_voucher_get_upto"><![CDATA[Buy a voucher & get upto]]></string>
    <string name="terms_condition_"><![CDATA[Terms & Condition]]></string>
    <string name="add_cpn">Add Coupon</string>
    <string name="proceed_now">Proceed Now</string>
    <string name="already_have_a_banner_layout">Already Have a Banner Layout</string>
    <string name="cpn_layout">Coupon Layout</string>
    <string name="select_a_package_to_start_the_service">Select a package to start the service</string>
    <string name="update_password">Update Password</string>
    <string name="add_your_stores">Add Your Stores</string>
    <string name="main_text">Main Text (upto 50 words)</string>
    <string name="payment">Payment:</string>
    <string name="job_location">Job Location</string>
    <string name="by">By:</string>
    <string name="order_id">Order ID :</string>
    <string name="call_now">Call Now</string>
    <string name="view_details">View Details</string>
    <string name="auto_detect_my_location">Auto detect my location</string>
    <string name="add_more_details">Add More Details</string>
    <string name="for_more_accuracy">for more accuracy</string>
    <string name="location">Location</string>
    <string name="landmark">Landmark</string>
    <string name="flat_house_number">Flat/House Number</string>
    <string name="off">Off</string>
    <string name="valid_till">Valid Till</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="product_title">Product Title</string>
    <string name="lunch">Lunch</string>
    <string name="price">Price</string>
    <string name="sub_ex_grilled_cottage_cheese_onion">Sub(Ex. Grilled Cottage Cheese + Onion..)</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="note">Note:-</string>
    <string name="about_food">About Food</string>
    <string name="message">Message</string>
    <string name="_2_on_demand_services">2 On Demand Services</string>
    <string name="_1_delivery_service">1 Delivery Service</string>
    <string name="valid_till_25_may_2019">Valid Till 25 May 2019</string>
    <string name="update_package">Update Package</string>
    <string name="jack_harry">Jack Harry</string>
    <string name="status">Status :</string>
    <string name="contact">Contact</string>
    <string name="apple_vipe">Apple Vipe</string>
    <string name="x_2">x 2</string>
    <string name="item_total">Item Total</string>
    <string name="tax">Tax</string>
    <string name="grand_total">Grand Total</string>
    <string name="deliever_to">Deliever To</string>
    <string name="_0_52">0:52</string>
    <string name="back">Back</string>
    <string name="select_a_coupon_layout">Select a coupon layout</string>
    <string name="customer_name">Customer Name</string>
    <string name="time_slot">Time Slot</string>
    <string name="total_amount_to_be_paid">Total amount to be paid</string>
    <string name="order_details">Order Details</string>
    <string name="add">Add</string>
    <string name="store_banner">Store Banner</string>
    <string name="brief_info">Brief Info</string>
    <string name="store_name">Store Name</string>
    <string name="change_location">Change Location</string>
    <string name="add_new_store">Add New Store</string>
    <string name="add_new">Add New</string>
    <string name="cash">Cash</string>
    <string name="american_burger_x1_american_burger_x2">American Burger X1, American Burger X2</string>
    <string name="district_2_1323_riverside_drive_redding">District 2 1323 Riverside Drive Redding</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="_25_off">25% Off</string>
    <string name="change">Change</string>
    <string name="johan_doe_example_com">johan.doe@example.com</string>
    <string name="update">Update</string>
    <string name="order_id_">Order Id</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="withdrawl_now">Withdrawl Now</string>
    <string name="_1500_00_paid">$1500.00 Paid</string>
    <string name="account_id">Account Id</string>
    <string name="featured">Featured</string>
    <string name="valid_30_days">Valid 30 Days</string>
    <string name="_150_00_paid">$150.00 Paid</string>
    <string name="dispatched">Dispatched</string>
    <string name="view">View</string>
    <string name="complete">Complete</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="jessica_ruby">Jessica Ruby</string>
    <string name="plumber_for_2_hours">PLUMBER -FOR 2 HOURS</string>
    <string name="accept_job">Accept Job</string>
    <string name="reject">Reject</string>
    <string name="home_cleaning">Home Cleaning</string>
    <string name="chicago_style_pizza">Chicago-style Pizza</string>
    <string name="car_repairing">Car Repairing</string>
    <string name="store_service">Store Service :</string>
    <string name="food_deliver">Food Deliver</string>
    <string name="plumber">Plumber</string>
    <string name="manage_services">Manage Services</string>
    <string name="products">Products</string>
    <string name="live_orders">Live Orders</string>
    <string name="service_pricing">Service Pricing</string>
    <string name="my_package">My Package</string>
    <string name="payments">Payments</string>
    <string name="store_info">Store Info</string>
    <string name="manage_address">Manage Address</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="address">Address</string>
</resources>