<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/edit_profile"
            android:icon="@drawable/edit"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/manageservices"
            android:icon="@drawable/service"
            android:title="@string/manage_services" />
        <item
            android:id="@+id/products"
            android:icon="@drawable/product"
            android:title="@string/products" />
        <item
            android:id="@+id/liveorders"
            android:icon="@drawable/cart"
            android:title="@string/live_orders" />

        <!--<item-->
            <!--android:id="@+id/servicepricing"-->
            <!--android:icon="@drawable/pricing"-->
            <!--android:title="@string/service_pricing" />-->

        <item
            android:id="@+id/mypackage"
            android:icon="@drawable/package_"
            android:title="@string/my_package" />
        <item
            android:id="@+id/payments"
            android:icon="@drawable/card"
            android:title="@string/payments" />
        <item
            android:id="@+id/storeinfo"
            android:icon="@drawable/shop_"
            android:title="@string/store_info" />
        <item
            android:id="@+id/manageaddress"
            android:icon="@drawable/address"
            android:title="@string/manage_address" />
        <item
            android:id="@+id/add_coupons"
            android:icon="@drawable/coupon_"
            android:title="@string/add_coupons" />
        <item
            android:id="@+id/helpsupport"
            android:icon="@drawable/help"
            android:title="@string/help_supports" />
        <item
            android:id="@+id/editpassword"
            android:icon="@drawable/pass"
            android:title="@string/edit_password" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>



</menu>
