<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/med_padding">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/med_padding"
        android:background="@drawable/gray_stroke"
        android:hint="@string/category_name"
        android:padding="@dimen/med_padding" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_stroke"
        android:gravity="top"
        android:hint="@string/note_if_any"
        android:minLines="3"
        android:padding="@dimen/med_padding" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@drawable/round_corner_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:fontFamily="@font/semibold"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17sp" />


</LinearLayout>