<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/square_border"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_4dp"
        android:padding="@dimen/margin_4dp"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/extra_small">

        <ImageView
            android:id="@+id/img"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:padding="@dimen/extra_small">





                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:fontFamily="@font/regular"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/small_padding"
                    android:text="@string/the_pepper_mockingbird"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text" />


            <TextView
                android:id="@+id/summery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="@dimen/small_padding"
                android:text="@string/lipsum_short"
                android:textColor="@color/txt_light"
                android:textSize="@dimen/small_txt" />

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/img_dot"
            android:layout_marginTop="@dimen/margin_4dp"
            android:src="@drawable/ic_brightness_1_black_24dp"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_8dp"
        android:layout_toRightOf="@+id/img_dot"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/regular"


            android:text="@string/location"
            android:textSize="@dimen/text_size_15sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/regular"
                    android:text="@string/store_service"
                    android:textSize="@dimen/text_size_15sp" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/regular"

                    android:textColor="@color/black"
                    android:text="@string/food_deliver"
                    android:textSize="@dimen/text_size_15sp" />
            </LinearLayout>

        </RelativeLayout>
        <TextView
            android:fontFamily="@font/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/margin_4dp"
            android:text="@string/district_2_1323_riverside_drive_redding"
            android:textSize="@dimen/text_size_13sp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4dp"
            android:fontFamily="@font/regular"
            android:text="530-225-3426"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_13sp" />
    </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_toLeftOf="@+id/editlayout"

            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/edit_"
                android:drawablePadding="@dimen/small_padding"
                android:fontFamily="@font/semibold"
                android:gravity="right"
                android:text="@string/edit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_txt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/editlayout"
            android:layout_alignParentRight="true"

            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cross_"
                android:fontFamily="@font/semibold"
                android:gravity="right"
                android:drawablePadding="@dimen/small_padding"
                android:text="@string/remove"
                android:textColor="@color/red"
                android:textSize="@dimen/small_txt" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout></LinearLayout>