<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".forgot.EditPassword">
    <include layout="@layout/toolbar_child"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/margin_50dp"
        android:paddingLeft="@dimen/margin_30dp"
        android:paddingRight="@dimen/margin_30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/med_padding"
        android:background="@drawable/blue_divider"
        android:fontFamily="@font/regular"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:hint="@string/enter_old_password"
        android:padding="@dimen/med_padding" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/med_padding"
        android:background="@drawable/blue_divider"
        android:fontFamily="@font/regular"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:hint="@string/new_password"
        android:padding="@dimen/med_padding" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/med_padding"
        android:background="@drawable/blue_divider"
        android:fontFamily="@font/regular"
        android:gravity="center_vertical"
        android:hint="@string/confirm_new_password"
        android:padding="@dimen/med_padding" />

    <Button
        android:id="@+id/ux_btn_continue_otpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginRight="@dimen/margin_50dp"
        android:background="@drawable/round_corner_button"
        android:text="Update Password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17sp" />
    </LinearLayout>
</LinearLayout>